-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Working on SERVER-74539 uncovered a bug in isIntervalEmpty: it wrongly considers [MinKey, MinKey] and [MaxKey, MaxKey] to be empty intervals. This bug was hidden because the ABT translation for comparison with MinKey/MaxKey generates a disjunction, so converting disjunction to SargableNode reveals the bug.
We can also expose the bug by simplifying the ABT translation: the disjunction is only necessary when the comparison to MinKey/MaxKey is an inequality.