SERVER-75448 In isIntervalEmpty, check inclusivity for MinKey/MaxKey